Kelsey Development Sandbox/src/objects/DS_SDQ_PSI_CDI_B__c.object
<CustomObject>
    <fields>
        <fullName>BBEHNULLP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for behavioral section (parent)</description>
        <label>BBEHNULLP</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBEHNULLS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for behavioral section (self)</description>
        <label>BBEHNULLS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDOAPSI__c</fullName>
        <label>BDOAPSI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOASDOP__c</fullName>
        <description>Parent 11-17: Date of Administration</description>
        <label>BDOASDOP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOASDOS__c</fullName>
        <description>Self 11-17: Date of Administration</description>
        <label>BDOASDOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOASDYP__c</fullName>
        <description>Parent 4-10: Date of Administration</description>
        <label>BDOASDYP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOV__c</fullName>
        <formula>Background_ID__r.BDOV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BEMONULLP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for emotional section (parent)</description>
        <label>BEMONULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BEMONULLS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for emotional section (self)</description>
        <label>BEMONULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BFORM__c</fullName>
        <label>BFORM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHYPNULLP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for hyperactivity section (parent)</description>
        <label>BHYPNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BHYPNULLS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for hyperactivity section (self)</description>
        <label>BHYPNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BKHBNULLP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for kind and helpful behaviors section (parent)</description>
        <label>BKHBNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BKHBNULLS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for kind and helpful behaviors section (self)</description>
        <label>BKHBNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMETSDOP__c</fullName>
        <description>Parent 11-17 method of administration</description>
        <label>BMETSDOP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMETSDOS__c</fullName>
        <description>Self 11-17 method of administration</description>
        <label>BMETSDOS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMETSDYP__c</fullName>
        <description>Parent 4-10 method of administration</description>
        <label>BMETSDYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOTCNULLP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for other children section (parent)</description>
        <label>BOTCNULLP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOTCNULLS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of blank questions for other children section (self)</description>
        <label>BOTCNULLS</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDC2__c</fullName>
        <description>Difficult Child (DC)</description>
        <label>BPSIDC2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDC_PTLE2__c</fullName>
        <description>Difficult Child (DC) Percentile</description>
        <label>BPSIDC_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDC_PTLE__c</fullName>
        <description>Difficult Child (DC) Percentile</description>
        <label>BPSIDC_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDC__c</fullName>
        <description>Difficult Child (DC)</description>
        <label>BPSIDC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDR2__c</fullName>
        <description>Defensive Responding</description>
        <label>BPSIDR2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDR_PTLE2__c</fullName>
        <description>Defensive Responding Percentile</description>
        <label>BPSIDR_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDR_PTLE__c</fullName>
        <description>Defensive Responding Percentile</description>
        <label>BPSIDR_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIDR__c</fullName>
        <description>Defensive Responding</description>
        <label>BPSIDR</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPCDI2__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI)</description>
        <label>BPSIPCDI2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPCDI_PTLE2__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI) Percentile</description>
        <label>BPSIPCDI_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPCDI_PTLE__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI) Percentile</description>
        <label>BPSIPCDI_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPCDI__c</fullName>
        <description>Parent-Child Dysfunctional Interaction (P-CDI)</description>
        <label>BPSIPCDI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPD2__c</fullName>
        <description>Parental Distress (PD)</description>
        <label>BPSIPD2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPD_PTLE2__c</fullName>
        <description>Parental Distress (PD) Percentile</description>
        <label>BPSIPD_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPD_PTLE__c</fullName>
        <description>Parental Distress (PD) Percentile</description>
        <label>BPSIPD_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSIPD__c</fullName>
        <description>Parental Distress (PD)</description>
        <label>BPSIPD</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSITS2__c</fullName>
        <description>Total Stress</description>
        <label>BPSITS2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSITS_PTLE2__c</fullName>
        <description>Total Stress Percentile</description>
        <label>BPSITS_PTLE2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSITS_PTLE__c</fullName>
        <description>Total Stress Percentile</description>
        <label>BPSITS_PTLE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPSITS__c</fullName>
        <description>Total Stress</description>
        <label>BPSITS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPAFRA__c</fullName>
        <description>Parent 4-10: Many fears, easily scared</description>
        <label>BSDPAFRA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPATTE__c</fullName>
        <description>Parent 4-10: Good attention span, sees chores or homework through to the end</description>
        <label>BSDPATTE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPBEH__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Behavioral Difficulties Scoring, Parent4-10</description>
        <label>BSDPBEH</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPBTYP__c</fullName>
        <description>Significance behavior parent</description>
        <label>BSDPBTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPBULL__c</fullName>
        <description>Parent 4-10: Picked on or bullied by other youth</description>
        <label>BSDPBULL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPCARI__c</fullName>
        <description>Parent 4-10: Helpful if someone is hurt, upset or feeling ill</description>
        <label>BSDPCARI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPCLIN__c</fullName>
        <description>Parent 4-10: Nervous in new situations, easily loses confidence</description>
        <label>BSDPCLIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPCOMM__c</fullName>
        <description>Parent 4-10: Do you have any other comments or concerns? (Please specify)</description>
        <label>BSDPCOMM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSDPCONS__c</fullName>
        <description>Parent 4-10: Considerate of other people&apos;s feelings</description>
        <label>BSDPCONS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPDCL__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Impact of any Difficulties on the Child&apos;s Life Scoring, Parent11-17</description>
        <label>BSDPDCL</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPDIST__c</fullName>
        <description>Parent 11-17: Easily distracted, concentration wanders</description>
        <label>BSDPDIST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPEBCD__c</fullName>
        <description>Parent 11-17: Overall, do you think that your child has difficulties in one or more of the following areas: emotions, concentration, behavior or being able to get on with other people?</description>
        <label>BSDPEBCD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPEMO__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Emotional Distress Scoring, Parent 11-17</description>
        <label>BSDPEMO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPETYP__c</fullName>
        <description>Significance Emotional parent</description>
        <label>BSDPETYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPFAM__c</fullName>
        <description>Parent 11-17: Do the difficulties put a burden on you or the family as a whole?</description>
        <label>BSDPFAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPFIDG__c</fullName>
        <description>Parent 11-17: Constantly fidgeting or squirming</description>
        <label>BSDPFIDG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPFIGH__c</fullName>
        <description>Parent 11-17: Often fights with other children or bullies them</description>
        <label>BSDPFIGH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPFRIE__c</fullName>
        <description>Parent 11-17: Has at least one good friend</description>
        <label>BSDPFRIE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPHELP__c</fullName>
        <description>Parent 4-10: Often offers to help others (parents, teachers, children)</description>
        <label>BSDPHELP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPHTYP__c</fullName>
        <description>Significance hyperactive parent</description>
        <label>BSDPHTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPHYP__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hyperactivity and Attentional Difficulties Scoring, Parent4-10</description>
        <label>BSDPHYP</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPIMPC__c</fullName>
        <description>Parent 4-10: Do the difficulties interfere with your child&apos;s everyday life in the following areas? CLASSROOM LEARNING</description>
        <label>BSDPIMPC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPIMPF__c</fullName>
        <description>Parent 4-10: Do the difficulties interfere with your child&apos;s everyday life in the following areas? FRIENDSHIPS</description>
        <label>BSDPIMPF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPIMPH__c</fullName>
        <description>Parent 4-10: Do the difficulties interfere with your child&apos;s everyday life in the following areas? HOME LIFE</description>
        <label>BSDPIMPH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPIMPL__c</fullName>
        <description>Parent 4-10: Do the difficulties interfere with your child&apos;s everyday life in the following areas? LEISURE ACTIVITIES</description>
        <label>BSDPIMPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPINFOR__c</fullName>
        <description>Parent 4-10: Who was the informant?  Mother/Father/Other</description>
        <label>BSDPINFOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPINFSP__c</fullName>
        <description>Parent 4-10: Other (please specify:)</description>
        <label>BSDPINFSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSDPITYP__c</fullName>
        <description>Significance Impact Parent</description>
        <label>BSDPITYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPKHB__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Kind and Helpful Behavior Scoring, Parent4-10</description>
        <label>BSDPKHB</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPKIND__c</fullName>
        <description>Parent 4-10: Kind to younger children</description>
        <label>BSDPKIND</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPKTYP__c</fullName>
        <description>Significance kind parent</description>
        <label>BSDPKTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPLIES__c</fullName>
        <description>Parent 4-10: Often lies or cheats</description>
        <label>BSDPLIES</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPLONE__c</fullName>
        <description>Parent 4-10: Would rather be alone than with other youth</description>
        <label>BSDPLONE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPOBEY__c</fullName>
        <description>Parent 4-10: Generally well behaved, usually does what adults request</description>
        <label>BSDPOBEY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPOLDB__c</fullName>
        <description>Parent 4-10: Gets along better with adults than with other youth</description>
        <label>BSDPOLDB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPOTC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Difficulties with Other Children Scoring, Parent4-10</description>
        <label>BSDPOTC</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSDPOTYP__c</fullName>
        <description>Significance other children parent</description>
        <label>BSDPOTYP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Borderline</fullName>
                </value>
                <value>
                    <fullName>Abnormal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPPOPU__c</fullName>
        <description>Parent 4-10: Generally liked by other youth</description>
        <label>BSDPPOPU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPREFL__c</fullName>
        <description>Parent 4-10: Thinks things out before acting</description>
        <label>BSDPREFL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPREST__c</fullName>
        <description>Parent 4-10: Restless, overactive, cannot stay still for long</description>
        <label>BSDPREST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPSHAR__c</fullName>
        <description>Parent 4-10: Shares readily with other youth, for example CD’s, games, food</description>
        <label>BSDPSHAR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPSOMA__c</fullName>
        <description>Parent 4-10: Often complains of headaches, stomach-aches or sickness</description>
        <label>BSDPSOMA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSDPSTEA__c</fullName>
        <description>Parent 4-10: Steals from home, school or elsewhere</description>
        <label>BSDPSTEA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>